--- a/ottergram-hg-layout/stylesheets/styles.css
+++ b/ottergram-hg-layout/stylesheets/styles.css
@@ -33,12 +33,34 @@ body {
     background: #43444C;
 }
 
+footer {
+    text-align: center;
+    background: rgb(54, 56, 63); 
+    font-size: 0.8em;
+    font-family: sans-serif;
+    font-weight: 100;
+}
+
 a {
     text-decoration: none;
+}
+.site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 .main-header {
     flex: 0 1 auto;
+}
+
+.thumbnail-list, .rhs-list {
+    flex: 0 0 12em;
+    flex-direction: column;
+}
+
+.rhs-list {
+    order: 1;
 }
 
 .main-content {
@@ -70,9 +92,7 @@ a {
     max-width: 120px;
 }
 
-.thumbnail-list {
-    order: 2;
-    flex: 0 1 auto;
+.thumbnail-list, .rhs-list {
     list-style: none;
     justify-content: space-between;
     padding: 0;
@@ -115,15 +135,12 @@ a {
     bottom: -16px;
     left: 4px;
 }
-
-@media all and (min-width: 768px) {
     .main-content {
       flex-direction: row;
       overflow: hidden;
     }
   
     .thumbnail-list {
-      flex-direction: column;
       order: 0;
       margin-left: 2em;
     }
