--- a/front-end-dev-book/ottergram/stylesheets/styles.css
+++ b/front-end-dev-book/ottergram/stylesheets/styles.css
@@ -68,6 +68,13 @@ a {
     border: 1px solid rgba(110, 110, 110, 0.8);
     min-width: 120px;
     max-width: 120px;
+    max-height: 120px;
+    overflow: hidden;
+}
+
+.thumbnail-item:hover{
+    transform: scale(1.2);
+    transition: transform 133ms ease-in;
 }
 
 .thumbnail-list {
@@ -79,6 +86,7 @@ a {
     white-space: nowrap;
     overflow-x: auto;
     display: flex;
+    padding: 20px 0;
 }
 
 .logo-text {
@@ -100,6 +108,13 @@ a {
 .detail-image-frame {
     position: relative;
     text-align: center;
+
+    transition: transform 333ms cubic-bezier(1,.06,.28,1);
+}
+
+.is-tiny {
+    transform: scale(0.001);
+    transition: transform 0ms;
 }
 
 .detail-image {
@@ -139,6 +154,7 @@ a {
       flex-direction: column;
       order: 0;
       margin-left: 2em;
+      padding: 0 35px;
     }
   
     .thumbnail-item {
